# pure-pyawabi

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
pyawabi/: __init__.py  awabi.py  dic.py  lattice.py  main.py  mecabrc.py  tokenizer.py
tests/: __init__.py  dic.py  test_dic.py  tokenizer.py
